# nabla

./: .travis.yml  CMakeLists.txt  CMakeTPL.txt  INSTALL  Makefile  README  README.org  VERSION  makefile  nabla.S  nabla.c  nabla.dox  nabla.h  nabla.l  nabla.y  nabla.y.h  nablaAst.c  nablaAst.h  nablaAstDfs.c  nablaAstNode.c  nablaDebug.c  nablaDebug.h  nablaTimeTree.c  nablaTools.c  nablaTools.h  nablaY.h  orgopt.l  orgopt.y
aleph/: Aleph.h  AlephFactory.cc  AlephIndexing.cc  AlephIndexing.h  AlephInterface.h  AlephKernel.cc  AlephKernel.h  AlephMatrix.cc  AlephMatrix.h  AlephOrdering.cc  AlephOrdering.h  AlephParams.cc  AlephParams.h  AlephStd.cc  AlephStd.h  AlephTopology.cc  AlephTopology.h  AlephTypesSolver.h  AlephVector.cc  AlephVector.h  CMakeLists.txt  IAlephFactory.h
aleph/hypre/: CMakeLists.txt  IAlephHypre.cc  IAlephHypre.h
aleph/kappa/: AlephKappa.cc  AlephKappa.h
aleph/petsc/: CMakeLists.txt  IAlephPETSc.cc  IAlephPETSc.h
aleph/trilinos/: IAlephTrilinos.cc  IAlephTrilinos.h
backends/arcane/: CMakeLists.txt  arcane.c  arcane.h  axl.c  data.c  family.c  function.c  header.c  hlt.c  hooks.c  jCells.c  jFaces.c  jNodes.c  jParticles.c  job.c  main.c  mesh.c  module.c  nArcane.c  nArcane.h  nArcaneAXL.c  nArcaneConfig.c  nArcaneFunction.c  nArcaneHLT.c  nArcaneHooks.c  nArcaneJob.c  nArcaneJobCells.c  nArcaneJobFaces.c  nArcaneJobNodes.c  nArcaneJobParticles.c  nArcaneMain.c  nArcaneModule.c  nArcaneSimd.c  nccArc.c  nccArcAxl.c  nccArcConfig.c  nccArcFunction.c  nccArcHooks.c  nccArcJob.c  nccArcJobCells.c  (+14 more)
backends/arcane/lib/: aleph.c  cartesian.c  dft.c  gmp.c  mail.c  materials.c  mma.c  particles.c  scheme.c  slurm.c
backends/arcane/libraries/: nArcaneLibAleph.c  nArcaneLibCartesian.c  nArcaneLibDFT.c  nArcaneLibGMP.c  nArcaneLibMail.c  nArcaneLibMaterials.c  nArcaneLibMathematica.c  nArcaneLibParticles.c  nArcaneLibScheme.c  nArcaneLibSlurm.c  nccArcLibAleph.c  nccArcLibCartesian.c  nccArcLibDft.c  nccArcLibGmp.c  nccArcLibMail.c  nccArcLibMaterials.c  nccArcLibMathematica.c  nccArcLibParticles.c  nccArcLibScheme.c  nccArcLibSlurm.c
backends/cc/: CMakeLists.txt  ccData.c  ccDump.S  ccHook.c  ccHook.h  ccHookArguments.c  ccHookDiffraction.c  ccHookForLoops.c  ccHookGather.c  ccHookParameters.c  ccHookReductions.c  ccHookScatter.c  ccHookTokens.c  ccJobs.c  ccMain.c  ccVariables.c
backends/cc/outputs/: knMsh.c  knStdGather.h  knStdScatter.h  knStdTernary.h
backends/cuda/: CMakeLists.txt  cuda.c  cuda.h  data.c  forall.c  gather.c  header.c  hook.c  main.c  mesh.c  nCuda.c  nCuda.h  nCudaArgs.c  nCudaDump.S  nCudaEnum.c  nCudaFunction.c  nCudaHeader.c  nCudaJob.c  nCudaMain.c  nCudaSimd.c  nCudaVariables.c  nccCuda.c  nccCuda.h  nccCudaDump.S  nccCudaEnumerates.c  nccCudaFunction.c  nccCudaJob.c  nccCudaMain.c  nccCudaMesh.c  nccCudaSimd.c  nccCudaVariables.c  reduce.c  source.c  tokens.c  vars.c
backends/cuda/dump/: CMakeLists.txt  cuDebug.h  cuError.h  cuExtra.h  cuItems.h  cuMeshs.h  cuMsh.h  cuTypes.h  cuda.S  cuda.c  debug.h  error.h  extra.h  meshs.h  nCudaDump.S  (+2 more)
backends/kokkos/: CMakeLists.txt  args.c  data.c  forall.c  gather.c  header.c  hook.c  hook.h  kokkos.S  kokkos.c  kokkos.h  kokkos_dump.h  main.c  mesh.c  reduce.c  scatter.c  source.c  tokens.c  variables.c  vars.c
backends/lambda/: CMakeLists.txt  data.c  forall.c  gather.c  header.c  hook.c  lambda.c  lambda.h  main.c  mesh.c  nLambda.c  nLambda.h  nLambdaData.c  nLambdaDump.S  nLambdaHook.c  nLambdaHookParameters.c  nLambdaHookReductions.c  nLambdaMain.c  nLambdaMesh.c  nLambdaVariables.c  parallelOpenMP.c  params.c  scatter.c  source.c  tokens.c  vars.c
backends/legion/: CMakeLists.txt  call.c  forall.c  gram.c  header.c  hooks.c  legion.c  legion.h  main.c  source.c  token.c  vars.c
backends/lib/: CMakeLists.txt
backends/okina/: CMakeLists.txt  data.c  forall.c  header.c  hook.c  knArgs.c  knEnum.c  knHeader.c  knInit.c  knMain.c  knPragma.c  knVariables.c  main.c  mesh.c  nOkina.c  nOkina.h  nOkinaArgs.c  nOkinaData.c  nOkinaDump.S  nOkinaEnum.c  nOkinaFunc.c  nOkinaHead.c  nOkinaHeader.c  nOkinaInit.c  nOkinaJobs.c  nOkinaMain.c  nOkinaMesh.c  nOkinaMesh1D.c  nOkinaMesh3D.c  nOkinaParallelCilk.c  nOkinaParallelOpenMP.c  nOkinaParallelVoid.c  nOkinaParams.c  nOkinaPragmas.c  nOkinaSimdAvx.c  nOkinaSimdMic.c  nOkinaSimdSse.c  nOkinaSimdStd.c  nOkinaVariables.c  okina.S  (+6 more)
backends/raja/: CMakeLists.txt  forall.c  hook.c  main.c  raja.S  raja.c  raja.h  raja_dump.h  reduce.c
backends/x86/: CMakeLists.txt
frontend/: CMakeLists.txt  ast.h  astNode.c  astTree.c  dbg.c  dbg.h  dfs.c  frontend.h  nFrontend.h  nablaAst.h  nablaAstDfs.c  nablaAstNode.c  nablaAstTree.c  nablaDebug.c  nablaDebug.h  nablaTimeTree.c  nablaTools.c  nablaTools.h  rules.c
middlend/: CMakeLists.txt  animate.c  args.c  arguments.c  entities.c  functions.c  globals.c  gram.c  grammar.c  header.c  hlt.c  init.c  items.c  jobs.c  libs.c  middlend.c  middlend.h  nMiddle.c  nMiddleAnimate.c  nMiddleArgs.c  nMiddleEntities.c  nMiddleFunctions.c  nMiddleGrammar.c  nMiddleHLT.c  nMiddleHeader.c  nMiddleItems.c  nMiddleJobs.c  nMiddleLibraries.c  nMiddleOptions.c  nMiddleTimeTree.c  nMiddleVariables.c  nMiddlend.h  nMiddlendHooks.h  nablaFunctions.c  nablaHLT.c  nablaItems.c  nablaJobs.c  nablaLibraries.c  nablaMiddlend.c  nablaMiddlend.h  (+11 more)
nabla/: CMakeLists.txt  nabla.S  nabla.c  nabla.h  nabla.l  nabla.y  nabla.y.h
ncc/: CMakeLists.txt  nabla.S  nabla.c
okina/: CMakeLists.txt  okina.h
okina/512/: CMakeLists.txt  kn512Integer.h  kn512OStream.h  kn512Real.h  kn512Real3.h  kn512Scatter.h  kn512Ternary.h
okina/avx/: CMakeLists.txt  knAvxGather.h  knAvxInteger.h  knAvxOStream.h  knAvxReal.h  knAvxReal3.h  knAvxScatter.h  knAvxTernary.h  knAvxTests.c
okina/mic/: CMakeLists.txt  knMicInteger.h  knMicReal3.h  knMicScatter.h
okina/sse/: CMakeLists.txt  knSseGather.h  knSseInteger.h  knSseOStream.h  knSseReal.h  knSseScatter.h
okina/std/: CMakeLists.txt  knSTD.h  knStdInteger.h  knStdOStream.h  knStdReal.h  knStdReal3.h  knStdScatter.h
orgopt/: CMakeLists.txt  orgopt.c  orgopt.l  orgopt.y
(+1061 files in other folders)
